# llm_curriculum

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  agent_conductor.py  conda-requirements.txt  env_wrappers.py  pip-requirements.txt  pyproject.toml  sb3_callbacks.py  sb3_train.py  separate_policies_train.py  setup.py  tasks.py  test_gym.py  test_wrapper.py
.github/workflows/: ci-testing-pip.yml  ci-testing.yml
cluster/: README.md  script.sh  td3.sh  td3_decompose.sh  td3_her.sh
examples/: debug_cube_morphing.py  debug_handle_morph.py  fetch_custom_env.py  fetch_pick_and_place.py  fetch_single_task.py
experiments/: debug_sb3_td3.sh
experiments/value_bootstrap/: download_checkpoints.sh  train_models.sh
gpt_automation/: fetch_gpt_observation_sample.py
llm_curriculum/envs/: __init__.py  agent_conductor.py  cli.py  curriculum_manager.py  make_env.py  sequenced_rollouts.py  task_trees.py  tasks.py  temp_drawer_decompositions.py  wrappers.py
llm_curriculum/learning/: sac_continuous_action.py  td3_continuous_action.py  td3_custom.py  train_multitask_separate.py  train_multitask_single.py  train_singletask.py  utils.py  zero-shot_adapt.py
llm_curriculum/utils/: stats.py  (+2 more)
llm_curriculum_algo/: agent_conductor.py  curriculum_manager.py  embeddings_visualize.py  env_wrappers.py  sb3_callbacks.py  sb3_train.py  separate_policies_train.py  sequenced_rollouts.py  task_trees.py  tasks.py  temp_decompositions.py  temp_drawer_tasks.py  test_env.py
requirements/: base.in  base.txt  dev.txt
scripts/: download_wandb_checkpoint.py
tests/: test_drawer_env.py
(+245 files in other folders)
