[tool.poetry]
name = "llm-curriculum"
version = "0.1.0"
description = ""
authors = ["Daniel Tan <dtch1997@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "llm_curriculum"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.13"
gymnasium-robotics = "^1.2.2"
gym = "0.23.1"
stable-baselines3 = "1.2.0"
tensorboard = "^2.13.0"
wandb = "^0.15.3"


[tool.poetry.group.tests.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"
pytest-flake8 = "^1.1.1"
check-manifest = "^0.49"
pre-commit = "^3.3.2"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Never try to fix `F401` (unused imports).
unfixable = ["F401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
